-----3.0.0 (XX) -----
New features:
	* [general]
		* Allow to customize which actions have to be shown in the toolbars
		* Expose more column related actions the context menu in the project (plot data, etc.) also when multiple columns are selected
		* Add possibility to skip storing the data from columns and matrices in the saved file
		* Improve spinbox localization
	* [analysis]
		* Save and load custom functions for fit, equation curve and function values
		* Baseline correction analysis in the plot
	* [time series analysis]
		* seasonal decomposition with STL and MSTL methods
	* [spreadsheet]
		* allow to drop entire rows in the spreadsheet if the condition was met in the "Drop Values Dialog" for the selected columns
		* more informative tooltip texts for spreadsheets and columns showing the usage of the column in other places in the project
		* show the average 2-period moving range in the column statistics
		* in the plot data dialog allow to create plot areas on separate worksheets, one worksheet with plot area per column
		* transposition of columns and rows
		* move the definition of the column formula directly to the dock widget
	* [worksheet]
		* Inset plot areas - plot areas added as child of another plot area
		* Improved axis ticks location. They don't need to be always placed at the edges of the axis if does not look nicely (!700)
		* Allow to position the center and limit lines in the process behavior chart based on user-defined specifications
		* Additionally to using the colors for plots from the current theme palette, allow to use colors from a specified color map
		* Stacked line plots
	* [import]
		* Import directories - import multiple files in a directory in one single step
		* Support Unix timestamps (number of seconds since January 1, 1970 (UTC)) and Windows timestamps (number of 100-nanosecond intervals since January 1, 1601 (UTC)) in ASCII files, ms precision only
		* Allow to import arrays in JSON files that contain plain data only