@@ -5,7 +5,7 @@
 	--------------------------------------------------------------------
 	SPDX-FileCopyrightText: 2007-2009 Tilman Benkert <thzs@gmx.net>
 	SPDX-FileCopyrightText: 2007-2010 Knut Franke <knut.franke@gmx.de>
-	SPDX-FileCopyrightText: 2011-2025 Alexander Semke <alexander.semke@web.de>
+	SPDX-FileCopyrightText: 2011-2026 Alexander Semke <alexander.semke@web.de>
 	SPDX-License-Identifier: GPL-2.0-or-later
 */
 
@@ -312,6 +312,8 @@ public:
 	bool isMoved() const;
 	void setIsLoading(bool);
 	bool isLoading() const;
+	virtual void setChanged(bool value = true);
+	bool isChanged() const;
 	virtual QIcon icon() const;
 	virtual QMenu* createContextMenu();
 	void setProjectChanged(bool);
@@ -542,6 +544,8 @@ Q_SIGNALS:
 
 	void aspectCommentAboutToChange(const AbstractAspect*);
 	void aspectCommentChanged(const AbstractAspect*);
+
+	void aspectChangedStatusChanged(const AbstractAspect*);
 
 	/*!
 	 * \brief aspectAboutToBeAdded
